--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 </script>
 </head>
 <body>
-# engines
-Manual for SELPP engine part
-
-<ol>
-  <li>기본 지식</li>
-  <li>일상 업무</li>
-  <li>특별 업무</li>
-  <li>기타 사항</li>
-</ol>
+  <p><h2>Manual for SELPP engine part</h2></p>
+  
+  <ol>
+    <li>기본 지식</li>
+    <li>일상 업무</li>
+    <li>특별 업무</li>
+    <li>기타 사항</li>
+  </ol>
 </body>
 </html>
