--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </script>
 </head>
 <body>
-  <p><h2>Manual for SELPP engine part</h2></p>
+  <p><h3>Manual for SELPP engine part</h3></p>
+  항공기재팀 엔진파트 업무를 위한 페이지입니다.
   
   <ol>
     <li>기본 지식</li>
