--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>SELPP Engines</title>
   <meta charset="utf-8">
+  <style type="text/css"> 
+a { text-decoration:none } 
+</style> 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163192198-1"></script>
 <script>
