--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@ a { text-decoration:none }
   항공기재팀 엔진파트 업무를 위한 페이지입니다.
   
   <ul>
+    <div style='line-height:130%'>
     <li><a href="basic.html">엔진 기본 지식</a></li>
     <li><a href="status.html">엔진 현황</a></li>
     <li><a href="routine.html">일상 업무</a></li>
     <li><a href="special.html">특별 업무</a></li>
     <li><a href="etc.html">기타 사항</a></li>
+    </
   </ul>
 </body>
 </html>
