--- a/basic.html
+++ b/basic.html
@@ -1,1 +1,32 @@
+<!doctype html>
+<html>
+<head>
+  <title>SELPP Engines</title>
+  <meta charset="utf-8">
+  <style type="text/css"> 
+a { text-decoration:none } 
+</style> 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163192198-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-163192198-1');
+</script>
+</head>
+<body>
+  <p><h3>Manual for SELPP engine part</h3></p>
+  항공기재팀 엔진파트 업무를 위한 페이지입니다.
+  
+  <ul>
+    <div style='line-height:150%'>
+    <li><a href="basic.html">엔진 기본 지식</a></li>
+    <li><a href="status.html">엔진 현황</a></li>
+    <li><a href="routine.html">일상 업무</a></li>
+    <li><a href="special.html">특별 업무</a></li>
+    <li><a href="etc.html">기타 사항</a></li>
+  </ul>
+</body>
+</html>
