--- a/basic.html
+++ b/basic.html
@@ -31,8 +31,8 @@ a { text-decoration:none }
     <p>
       엔진의 종류, 엔진 구성, 엔진 작동원리 등
     </p>
-<a href="https://ko.wikipedia.org/wiki/%EC%A0%9C%ED%8A%B8_%EC%97%94%EC%A7%84">제트엔진 기초 (위키백과)</a><br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/wi0Xar8swcs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<a href="https://ko.wikipedia.org/wiki/%EC%A0%9C%ED%8A%B8_%EC%97%94%EC%A7%84">제트엔진 기초 (위키백과)</a><br><br>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/wi0Xar8swcs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
 </body>
 </html>
